Broke apart codekvast-collector.jar and aspectjweaver.jar.