@@ -1,7 +1,8 @@
 #!/bin/sh
 cd $(dirname $0)/..
 CODEKVAST_HOME=$PWD
-ENDORSED=${CODEKVAST_HOME}/endorsed
-COLLECTOR=$(find ${ENDORSED} -name '*collector*.jar')
+JAVAAGENTS=${CODEKVAST_HOME}/javaagents
+COLLECTOR=$(find ${JAVAAGENTS} -name '*collector*.jar')
+ASPECTJWEAVER=$(find ${JAVAAGENTS} -name '*aspectjweaver*.jar')
 CONFIG=${CODEKVAST_HOME}/conf/codekvast.conf
-echo -javaagent:${COLLECTOR}=${CONFIG} -Djava.endorsed.dirs=${ENDORSED}
+echo -javaagent:${COLLECTOR}=${CONFIG} -javaagent:${ASPECTJWEAVER}
